# trading

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  config.example.toml  nixpacks.toml  pyproject.toml  railway.toml  start.ps1  start.sh
.github/: copilot-instructions.md
.github/workflows/: collect_cot.yml  collect_equity_bars.yml  collect_forex_bars.yml  collect_fred.yml  seed_equity_bars.yml  seed_forex_bars.yml  seed_fred.yml  seed_sp500_constituents.yml
dashboard/: package-lock.json  package.json  vercel.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: ConvictionBadge.tsx  Layout.tsx  PlayCard.tsx  PlaybookPanel.tsx  SignalTable.tsx  SymbolInput.tsx
dashboard/src/hooks/: useAdvise.ts  useConfig.ts  useImport.ts  usePositions.ts  useScanner.ts  useScans.ts  useWatchlists.ts
dashboard/src/pages/: HistoryPage.tsx  PlaysPage.tsx  (+6 more)
docs/: dashboard.md
docs/plans/: 2026-02-28-trading-system-design.md  2026-02-28-trading-system-plan.md  2026-03-01-backtest-data-strategy.md
plans/: cloud-data-infrastructure.md  ux-and-tech-debt-audit.md
scripts/: seed_equity_bars.py  seed_forex_bars.py  seed_fred.py  seed_sp500_constituents.py
scripts/collect/: cot.py  equity_bars.py  forex_bars.py  fred.py
scripts/lib/: db.py
supabase/migrations/: 20260308044745_initial_schema.sql
tests/api/: test_advise_api.py  test_config_api.py  test_diagnostics_api.py  test_import_api.py  test_positions_api.py  test_scanner_api.py  test_scans_api.py  test_watchlists_api.py
tests/cli/: test_cli.py
tests/core/: test_bus.py  test_config.py  test_database.py  test_engine.py  test_factory.py  test_models.py  test_repositories.py
tests/importers/: test_fidelity.py  test_generic.py  test_registry.py
tests/plugins/: test_protocols.py
(+68 files in other folders)
