[project]
name = "trading"
version = "0.1.0"
description = "Hybrid trading system with automated signals and manual execution"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "yfinance>=0.2",
    "polygon-api-client>=1.14",
    "requests>=2.31",
    "twelvedata>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.28",
]

[project.scripts]
trading = "trading.cli.main:app"
trading-server = "trading.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that hit external APIs (deselect with '-m \"not slow\"')",
]
